# ChangeLog for sys-devel/gcc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.871 2012/04/28 00:57:23 dirtyepic Exp $

  05 May 2012; Fabian Groffen <grobian@gentoo.org> -gcc-4.5.2-r00.1.ebuild,
  -gcc-4.6.1-r1.ebuild, -gcc-4.6.2.ebuild:
  cleanup

  05 May 2012; Fabian Groffen <grobian@gentoo.org> +files/4.6.3,
  +files/4.6.3/solaris-x86_64.patch, gcc-4.6.3.ebuild:
  Fix x86_64 Solaris patch for 4.6.3

  04 May 2012; Fabian Groffen <grobian@gentoo.org>
  files/4.2.2/solarisx86_64.patch, files/4.3.0/solarisx86_64.patch,
  files/4.3.3/solarisx86_64.patch, files/4.5.1/solaris-x86_64.patch:
  Use link_target_spec from sol2-10.h, instead of defining our own

  04 May 2012; Fabian Groffen <grobian@gentoo.org>
  files/4.2.2/solarisx86_64.patch, files/4.3.0/solarisx86_64.patch,
  files/4.3.3/solarisx86_64.patch, files/4.4.0/gcc-4.4.1-solaris-x86_64.patch,
  files/4.5.1/solaris-x86_64.patch:
  Fix Solaris GNU ld 2.22 problem not only for 32-bits x86, but also for 64-bits
  by not explicitly passing the target onto the linker if not requested

  04 May 2012; Fabian Groffen <grobian@gentoo.org>
  +files/solaris-i386-ld-emulation-4.2.patch, gcc-4.2.4-r01.4.ebuild:
  Backport GNU ld 2.22 breakage patch to 4.2.2 since we need to bootstrap with
  that GCC

*gcc-4.6.3 (28 Apr 2012)

  28 Apr 2012; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.6.3.ebuild,
  metadata.xml:
  Version bump (bug #406571).

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gcc-4.5.3-r2.ebuild:
  keyword ~amd64-fbsd

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.5.3-r2.ebuild:
  Fix from upstream for building gcj with glibc-2.15+.

  28 Mar 2012; Markus Meier <maekke@gentoo.org> gcc-4.3.6-r1.ebuild:
  arm stable, bug #405845

*gcc-4.4.7 (27 Mar 2012)

  27 Mar 2012; Mike Frysinger <vapier@gentoo.org> +gcc-4.4.7.ebuild:
  Version bump #409033 by Mr. Anderson.
